...
        android:text="Set Message:"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/organizerMessageEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter message.." />

    <Button
        android:id="@+id/buttonSendMessage"
...
