<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/eventNameTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Event Name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/buttonScanQRCode"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:adjustViewBounds="false"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_qr_code" />

        <ImageButton
            android:id="@+id/buttonEventGeolocation"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:adjustViewBounds="false"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/baseline_location_pin_24" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/eventPosterTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Poster:"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/eventPosterImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    tools:srcCompat="@tools:sample/avatars" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/eventDescriptionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Description:"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/eventDescriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="My event details" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/eventDateTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Event Date:"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/eventDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="xx/xx/xxxx"
                    android:textAlignment="textEnd"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/eventDrawDateTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Draw Date:"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/eventDrawDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="xx/xx/xxxx"
                    android:textAlignment="textEnd"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/eventEntrantLimitTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Entrant Limit:"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/eventEntrantLimitText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="textEnd"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/eventSampleSizeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sample Size:"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/eventSampleSizeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="textEnd"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/eventGeoReqTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Geological Requirement:"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/eventGeoReqSwitch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:trackTint="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="8dp">

                <Button
                    android:id="@+id/buttonViewEntrants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="40dp"
                    android:text="View Entrants" />

                <Button
                    android:id="@+id/buttonEditEventDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Edit Poster" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>