<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/buttonWaitlistedUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/color_lukewarm_news"
        android:text="Waitlisted Users" />

    <Button
        android:id="@+id/buttonInvitedUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/color_spot_confirmed"
        android:text="Invited Users" />

    <Button
        android:id="@+id/buttonCancelledUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/color_bad_news"
        android:text="Cancelled Users" />

    <Button
        android:id="@+id/buttonConfirmedUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/primary"
        android:text="Confirmed Entrants" />

    <Button
        android:id="@+id/buttonSampleUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="Sample Entrants" />


</LinearLayout>